[tool.poetry]
name = "corr-plot"
version = "0.1.0"
description = ""
authors = ["Jack Coutts <jackwgcoutts@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
seaborn = "^0.13.2"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
scipy = "^1.14.1"
pyinstaller = "^6.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
plot = "corr_plot.main:main"
